Fix: additional info's z-index (above loading mask); current view button not disabled in search view. Add: tooltips to toolbar and navigation.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1064,6 +1064,11 @@ input.coll-form {
     cursor: default;
 }
 
+.change-s-view.active {
+    pointer-events: none;
+    cursor: default;
+}
+
 // Show More Button (Search IGDB)
 #show-more, .no-more {
     text-align: center;
