--- a/app/assets/stylesheets/covers.scss
+++ b/app/assets/stylesheets/covers.scss
@@ -5,7 +5,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    z-index: 99;
+    z-index: 1;
     margin: 0px;
     background: #c5c5c5;
     border-radius: 0px 0px 3px 3px;
